--- a/src/globals.css
+++ b/src/globals.css
@@ -1,3 +1,4 @@
+/*D:\Users\steli\Desktop\Transportadoras\transporte-moz\src\globals.css*/
 @import "tailwindcss";
 @tailwind base;
 @tailwind components;
